<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="abc_action_bar_home_description">Перейти на главный экран</string>
    <string name="abc_action_bar_up_description">Перейти вверх</string>
    <string name="abc_action_menu_overflow_description">Ещё</string>
    <string name="abc_action_mode_done">Готово</string>
    <string name="abc_activity_chooser_view_see_all">Показать все</string>
    <string name="abc_activitychooserview_choose_application">Выберите приложение</string>
    <string name="abc_capital_off">ВЫКЛ</string>
    <string name="abc_capital_on">ВКЛ</string>
    <string name="abc_menu_alt_shortcut_label">Alt +</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl +</string>
    <string name="abc_menu_delete_shortcut_label">Delete</string>
    <string name="abc_menu_enter_shortcut_label">Ввод</string>
    <string name="abc_menu_function_shortcut_label">Fn +</string>
    <string name="abc_menu_meta_shortcut_label">Meta +</string>
    <string name="abc_menu_shift_shortcut_label">Shift +</string>
    <string name="abc_menu_space_shortcut_label">Пробел</string>
    <string name="abc_menu_sym_shortcut_label">Sym +</string>
    <string name="abc_prepend_shortcut_label">Меню +</string>
    <string name="abc_search_hint">Введите запрос</string>
    <string name="abc_searchview_description_clear">Удалить запрос</string>
    <string name="abc_searchview_description_query">Поисковый запрос</string>
    <string name="abc_searchview_description_search">Поиск</string>
    <string name="abc_searchview_description_submit">Отправить запрос</string>
    <string name="abc_searchview_description_voice">Голосовой поиск</string>
    <string name="abc_shareactionprovider_share_with">Поделиться с помощью</string>
    <string name="abc_shareactionprovider_share_with_application">Поделиться с помощью %s</string>
    <string name="abc_toolbar_collapse_description">Свернуть</string>
    <string name="ac_air_close">AC выключен</string>
    <string name="ac_forbidden">Функция охлаждения кондиционера отключена</string>
    <string name="ac_forbidden_in_main_page">В режиме демонстрации функция охлаждения кондиционера ограничена</string>
    <string name="ac_forbidden_off">Функция охлаждения кондиционера восстановлена</string>
    <string name="ac_row1">1 ряд</string>
    <string name="ac_row2">2 ряд</string>
    <string name="ai_ac">AI-кондиционер</string>
    <string name="ai_ac_desc">При включении AI-кондиционера и режиме AUTO температура регулируется автоматически</string>
    <string name="air_behind_body_blowing">air_behind_body_blowing</string>
    <string name="air_behind_foot_blowing">air_behind_foot_blowing</string>
    <string name="air_front_body_blowing">air_front_body_blowing</string>
    <string name="air_front_foot_blowing">air_front_foot_blowing</string>
    <string name="air_front_window_blowing">air_front_window_blowing</string>
    <string name="aircondition">Климат</string>
    <string name="alert_dialog_title_hint">Подсказка</string>
    <string name="anion_widow_hint_title">Ионизация воздуха включена, пожалуйста, закройте все окна</string>
    <string name="app_name">Климат</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_close_window_request_pop">Салон не охлаждается, закройте все окна и люк</string>
    <string name="auto_fragrance_remind">Автоматический освежитель</string>
    <string name="auto_pm25_resquest_des">При выключении кондиционера, когда содержание PM2,5 превышает 75 мкг/м, появляется всплывающее окно с предложением включить кондиционер</string>
    <string name="auto_pm25_resquest_title">Напоминание об автоматической очистке PM2.5</string>
    <string name="auto_refreshing_fragrance_pop">Определяет, что вы устали, и выпускает для вас освежающий аромат</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Развернуть наполовину</string>
    <string name="buy_fragrance_btn">Получите ароматическую капсулу</string>
    <string name="buy_fragrance_buy_aid">Заправляйте ароматические капсулы и наслаждайтесь официальным продуктом</string>
    <string name="buy_fragrance_buy_way">Воспользуйтесь приложением Galaxy, чтобы отсканировать код для покупки</string>
    <string name="buy_fragrance_buy_way1">Следите за обновлениями</string>
    <string name="buy_fragrance_titile">Купить ароматические капсулы</string>
    <string name="cancel">Отмена</string>
    <string name="character_counter_content_description">Введено символов: %1$d из %2$d</string>
    <string name="character_counter_overflowed_content_description">Превышено ограничение на количество символов (%1$d из %2$d)</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Закрыть</string>
    <string name="close_auto_map">"Подсказка: 1. Будет закрыта карта AutoNavi (Gaode);
             2. Функция NOA будет недоступна."</string>
    <string name="close_baidu_map">"Подсказка: 1. Будет закрыта карта Baidu;
             2. Функция NOA будет недоступна."</string>
    <string name="close_behind_ac">Выкл 2 ряд</string>
    <string name="close_row3_ac">Выкл 3 ряд</string>
    <string name="close_window">Закрыть окна</string>
    <string name="comfort_close_wind_remind">Напоминание об открытых окнах</string>
    <string name="comfort_close_wind_remind_des">При использовании кондиционера</string>
    <string name="confirm">Подтвердить</string>
    <string name="constant_ac_hint">Не оставляйте детей или домашних животных в машине. Эта функция не может гарантировать их безопасность</string>
    <string name="constant_temp_ac">Кондиционер с постоянной температурой</string>
    <string name="constant_temp_ac_desc">После запирания автомобиля температура внутри автомобиля будет постоянной в пределах 35-40 градусов</string>
    <string name="default_fragrance">Неизвестно</string>
    <string name="eco">ECO</string>
    <string name="error_icon_content_description">Ошибка</string>
    <string name="exposed_dropdown_menu_content_description">Показать раскрывающееся меню</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fan_auto_comfort_level">Комфорт</string>
    <string name="fan_auto_powerful_level">Мощный</string>
    <string name="fan_auto_soft_level">Мягкий</string>
    <string name="fragrance">Аромат</string>
    <string name="fragrance_level_1">Слабо</string>
    <string name="fragrance_level_2">Средне</string>
    <string name="fragrance_level_3">Сильно</string>
    <string name="fragrance_level_off">Выкл</string>
    <string name="fragrance_low_pop">Выбранный аромат скоро закончится, не забудьте его заменить</string>
    <string name="fragrance_tips_txt">Инструкция по установке ароматизатора</string>
    <string name="fragrance_tips_txt1">"1. Откройте крышку с левой стороны панели приборов;
2. Переключите рычажок ароматического контейнера, контейнер автоматически выдвинется;
3. Достаньте контейнер, снимите алюминиевую фольгу с капсулы ароматизатора и вставьте капсулу в контейнер;
4. Вставьте контейнер обратно и нажмите, чтобы зафиксировать его в системе ароматизации, затем закройте крышку для использования."</string>
    <string name="fragrance_type_1">Свежесть</string>
    <string name="fragrance_type_2">Гармония</string>
    <string name="fragrance_type_3">Лес</string>
    <string name="fragrance_widget_1">Виджет 1</string>
    <string name="fragrance_widget_2">Виджет 2</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="i_know">Понятно</string>
    <string name="icon_content_description">Иконка диалога</string>
    <string name="ions_close_request_hint1">Ионизация воздуха</string>
    <string name="ions_close_request_hint2">Активировано, пожалуйста, закройте все окна и люк</string>
    <string name="ions_close_wind_remind">Напоминание о закрытии окон для ионизации воздуха</string>
    <string name="ions_close_wind_remind_des">При активации ионизации воздуха, если окна не закрыты полностью, появится напоминание</string>
    <string name="item_view_role_description">Вкладка</string>
    <string name="left2_seat">Левое сиденье второго ряда</string>
    <string name="main_seat">Водитель</string>
    <string name="massage_level_1">Мягкий</string>
    <string name="massage_level_2">Стандартный</string>
    <string name="massage_level_3">Интенсивный</string>
    <string name="massage_level_label">Мягкий, Стандартный, Интенсивный</string>
    <string name="massage_level_off">Выключено</string>
    <string name="massage_level_unknow">Неизвестно</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Выберите AM или PM</string>
    <string name="material_hour_selection">Выберите час</string>
    <string name="material_hour_suffix">%1$s часов</string>
    <string name="material_minute_selection">Выберите минуты</string>
    <string name="material_minute_suffix">%1$s минут</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="open">Открыть</string>
    <string name="pm25_request_hint1">Качество воздуха в салоне ухудшилось, сейчас будет включена</string>
    <string name="pm25_request_hint2">функция очистки PM2.5</string>
    <string name="seat">Сиденье</string>
    <string name="seat_heat_time_level1">5</string>
    <string name="seat_heat_time_level2">15</string>
    <string name="seat_heat_time_level3">30</string>
    <string name="seat_heat_time_ratain">Продолжительность</string>
    <string name="seat_set_detail_type_cushion">Подушка сиденья</string>
    <string name="seat_set_detail_type_leg">Подставка для ног</string>
    <string name="seat_set_detail_type_seat">Сиденье</string>
    <string name="seat_set_detail_type_waist">Поддержка поясницы</string>
</resources>