<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!-- <variable
            name="model"
            type="com.geely.hvac.viewmodel.MainViewModel" /> -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/layout_pm25_request_0" android:background="@color/dialog_gray_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.geely.hvac.component.ConstraintLayoutWithBg android:focusable="true" android:clickable="true" android:layout_width="@dimen/pm25_request_dialog_width" android:layout_height="@dimen/pm25_request_dialog_height" android:layout_marginTop="@dimen/pm25_request_dialog_top" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:normalColor="@color/alert_dialog_bg" app:radius="@dimen/alert_dialog_bg_radius">
            <com.geely.toolchain.hmi.view.HmiTextView android:id="@id/title" android:layout_marginTop="48.0dip" android:text="@string/alert_dialog_title_hint" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/alert_dialog_title" />
            <com.geely.toolchain.hmi.view.HmiTextView android:id="@id/content1" android:layout_marginTop="144.0dip" android:text="@string/pm25_request_hint1" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/content2" app:layout_constraintTop_toTopOf="parent" style="@style/alert_dialog_hint_text" />
            <com.geely.toolchain.hmi.view.HmiTextView android:textColor="@color/alert_dialog_hint_strong" android:id="@id/content2" android:layout_marginTop="144.0dip" android:text="@string/pm25_request_hint2" app:layout_constraintLeft_toRightOf="@id/content1" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/alert_dialog_hint_text" />
            <com.geely.hvac.component.TextViewWithBg android:textSize="@dimen/alert_dialog_btn_size" android:textColor="@color/btn_common_text_color" android:gravity="center" android:id="@id/sure" android:layout_width="@dimen/alert_dialog_double_btn_width" android:layout_height="@dimen/alert_dialog_double_btn_height" android:layout_marginTop="@dimen/alert_dialog_single_btn_top" android:text="@string/open" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/cancel" app:layout_constraintTop_toTopOf="parent" app:normalColor="@color/btn_common_color" app:pressColor="@color/btn_common_color_active" app:radius="@dimen/alert_dialog_btn_radius" />
            <com.geely.hvac.component.TextViewWithBg android:textSize="@dimen/alert_dialog_btn_size" android:textColor="@color/btn_cancel_text_color" android:gravity="center" android:id="@id/cancel" android:layout_width="@dimen/alert_dialog_double_btn_width" android:layout_height="@dimen/alert_dialog_double_btn_height" android:layout_marginTop="@dimen/alert_dialog_single_btn_top" android:text="@string/cancel" android:layout_marginStart="@dimen/alert_single_btn_margin" app:layout_constraintLeft_toRightOf="@id/sure" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:normalColor="@color/btn_cancel_color" app:pressColor="@color/btn_cancel_color_active" app:radius="@dimen/alert_dialog_btn_radius" />
        </com.geely.hvac.component.ConstraintLayoutWithBg>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>