<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="tab"
            type="com.geely.hvac.component.MainTab" />

    </data>

    <merge
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@id/tab_wrap"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:tag="layout/layout_main_tab_0"
            app:layout_constraintTop_toTopOf="parent">

            <com.geely.toolchain.hmi.view.HmiTextView
                android:id="@id/ac"
                style="@style/main_tab_item_txt"
                android:text="@string/aircondition" />

            <com.geely.toolchain.hmi.view.HmiTextView
                android:id="@id/seat"
                style="@style/main_tab_item_txt"
                android:text="@string/seat"
                android:visibility="visible" />

            <com.geely.toolchain.hmi.view.HmiTextView
                android:id="@id/fragrance"
                style="@style/main_tab_item_txt"
                android:text="@string/fragrance"
                android:visibility="gone" />
        </LinearLayout>

        <com.geely.hvac.component.ViewWithBackground
            android:id="@id/indicator"
            android:layout_width="@dimen/main_tab_item_indicator_width"
            android:layout_height="@dimen/main_tab_item_indicator_height"
            android:layout_marginTop="@dimen/main_tab_item_indicator_top"
            android:tag="layout/layout_main_tab_4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/tab_wrap"
            app:normalColor="@color/main_tab_item_txt_color_active"
            app:radius="@dimen/main_tab_item_indicator_radius" />
    </merge>

</layout>