<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="view"
            type="com.geely.hvac.component.FanAutoLevel" />
    </data>

<merge
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <com.geely.toolchain.hmi.view.HmiTextView
        android:id="@id/soft_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64.0dip"
        android:layout_marginTop="16.0dip"
        android:layout_marginBottom="20.0dip"
        android:tag="layout/layout_fan_auto_level_0"
        android:text="@string/fan_auto_soft_level"
        android:textSize="32.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.geely.toolchain.hmi.view.HmiImageView
        android:layout_width="1.0dip"
        android:layout_height="28.0dip"
        android:layout_marginStart="184.0dip"
        android:layout_marginTop="26.0dip"
        android:layout_marginBottom="26.0dip"
        android:background="@color/fan_auto_line"
        android:tag="layout/layout_fan_auto_level_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.geely.toolchain.hmi.view.HmiTextView
        android:id="@id/comfort_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="241.0dip"
        android:layout_marginTop="16.0dip"
        android:layout_marginBottom="20.0dip"
        android:tag="layout/layout_fan_auto_level_2"
        android:text="@string/fan_auto_comfort_level"
        android:textSize="32.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.geely.toolchain.hmi.view.HmiImageView
        android:layout_width="1.0dip"
        android:layout_height="28.0dip"
        android:layout_marginStart="360.0dip"
        android:layout_marginTop="26.0dip"
        android:layout_marginBottom="26.0dip"
        android:background="@color/fan_auto_line"
        android:tag="layout/layout_fan_auto_level_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.geely.toolchain.hmi.view.HmiTextView
        android:id="@id/powerful_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="417.0dip"
        android:layout_marginTop="16.0dip"
        android:layout_marginBottom="20.0dip"
        android:tag="layout/layout_fan_auto_level_4"
        android:text="@string/fan_auto_powerful_level"
        android:textSize="32.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</merge>
</layout>