<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="selector"
            type="com.geely.hvac.component.SeatTimeSelector" />
    </data>

<merge
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.geely.hvac.component.ViewWithBackground
        android:id="@id/bg"
        android:layout_width="@dimen/seat_heat_time_selector_width"
        android:layout_height="@dimen/seat_heat_time_selector_height"
        android:tag="layout/layout_seat_heat_time_selector_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:normalColor="@color/fragrance_region_bg"
        app:radius="@dimen/seat_heat_time_selector_radius" />

    <com.geely.hvac.component.ViewWithBackground
        android:id="@id/indicator"
        android:layout_width="@dimen/seat_heat_time_selector_indicator_width"
        android:layout_height="@dimen/seat_heat_time_selector_indicator_height"
        android:layout_marginStart="@dimen/seat_heat_time_selector_indicator_left"
        android:elevation="@dimen/fragrance_level_indicator_elevation"
        android:tag="layout/layout_seat_heat_time_selector_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:radius="@dimen/seat_heat_time_selector_indicator_radius" />

    <com.geely.toolchain.hmi.view.HmiTextView
        android:id="@id/level1"
        style="@style/seat_heat_time_level_item_text"
        android:tag="layout/layout_seat_heat_time_selector_2"
        android:text="@string/seat_heat_time_level1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="@dimen/seat_heat_time_selector_item_divider_width"
        android:layout_height="@dimen/seat_heat_time_selector_item_divider_height"
        android:background="@color/seat_heat_time_selector_item_divider_color"
        android:tag="layout/layout_seat_heat_time_selector_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/level2"
        app:layout_constraintTop_toTopOf="parent" />

    <com.geely.toolchain.hmi.view.HmiTextView
        android:id="@id/level2"
        style="@style/seat_heat_time_level_item_text"
        android:tag="layout/layout_seat_heat_time_selector_4"
        android:text="@string/seat_heat_time_level2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/level1"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="@dimen/seat_heat_time_selector_item_divider_width"
        android:layout_height="@dimen/seat_heat_time_selector_item_divider_height"
        android:background="@color/seat_heat_time_selector_item_divider_color"
        android:tag="layout/layout_seat_heat_time_selector_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/level3"
        app:layout_constraintTop_toTopOf="parent" />

    <com.geely.toolchain.hmi.view.HmiTextView
        android:id="@id/level3"
        style="@style/seat_heat_time_level_item_text"
        android:tag="layout/layout_seat_heat_time_selector_6"
        android:text="@string/seat_heat_time_level3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/level2"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="@dimen/seat_heat_time_selector_item_divider_width"
        android:layout_height="@dimen/seat_heat_time_selector_item_divider_height"
        android:background="@color/seat_heat_time_selector_item_divider_color"
        android:tag="layout/layout_seat_heat_time_selector_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/retain"
        app:layout_constraintTop_toTopOf="parent" />

    <com.geely.toolchain.hmi.view.HmiTextView
        android:id="@id/retain"
        style="@style/seat_heat_time_level_item_text"
        android:tag="layout/layout_seat_heat_time_selector_8"
        android:text="@string/seat_heat_time_ratain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/level3"
        app:layout_constraintTop_toTopOf="parent" />
</merge>
</layout>